tests/miz/fail/types/fail_type_elaboration_bracket_structure_argument_gap_001.miz
definition
  struct LocalStruct[r] where
    field carrier -> set;
  end;
end;

reserve s for LocalStruct[set];
